# multi-modality-evals

./: README.md  pyproject.toml
multi_modality_evals/: __main__.py  eval.py  logging_config.py
multi_modality_evals/models/: model.py  phi.py
